force-app/main/default/objects/student__c/fields/Annual_income__c.field-meta.xml
<CustomField>
    <fullName>Annual_income__c</fullName>
    <label>Annual income</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2-3</fullName>
            </value>
            <value>
                <fullName>3-4 Lacks</fullName>
            </value>
            <value>
                <fullName>4-5 Lacks</fullName>
            </value>
            <value>
                <fullName>above 6  Lacks</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>