force-app/main/default/objects/student__c/fields/emial__c.field-meta.xml
<CustomField>
    <fullName>emial__c</fullName>
    <label>emial</label>
    <type>Email</type>
</CustomField>