force-app/main/default/objects/student__c/fields/EntranceGrade__c.field-meta.xml
<CustomField>
    <fullName>EntranceGrade__c</fullName>
    <label>Entrance Grade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>