force-app/main/default/objects/student__c/fields/Father_Gaurdian__c.field-meta.xml
<CustomField>
    <fullName>Father_Gaurdian__c</fullName>
    <label>Father/Guardian</label>
    <length>40</length>
    <type>Text</type>
</CustomField>