force-app/main/default/objects/student__c/fields/Father_Occupation__c.field-meta.xml
<CustomField>
    <fullName>Father_Occupation__c</fullName>
    <label>Father Occupation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Government Employee</fullName>
            </value>
            <value>
                <fullName>Private Employee</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Agriculture</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>