force-app/main/default/objects/student__c/validationRules/studentNameRule.validationRule-meta.xml
<ValidationRule>
    <fullName>studentNameRule</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(REGEX( Name ,&quot;^[a-z A-Z]*$&quot;))</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>student name must be alphabets</errorMessage>
</ValidationRule>