force-app/main/default/objects/student__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Father_Occupation__c</columns>
    <columns>Department__c</columns>
    <columns>emial__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>